# SanDRA

./: .gitignore  README.md  config.py  decide.py  evaluate.py  highd_run.py  highenv-analysis.py  highenv_run.py  highenv_run_comb.py  main.py  plan.py  planner_config.yaml  pyproject.toml
config/: reactive_planner.yaml  sandra.py
docs/: index.html
experiments/: README.md  batch_evaluation.py  batch_patch.py  highenv-analysis.py  mona_analysis_add_label_columns.py  rule_monitoring.py  rule_monitoring_config_assembled.py  rule_monitoring_config_separate.py  rule_monitoring_plot.py  run_open_loop.py  sandra_analysis_xml.py  sandra_analysis_xml_rule.py  vis_action_distribution.py  vis_bar_llm.py  vis_bar_rule_prompt.py  vis_bar_user_command.py  vis_time.py
experiments/data/: batch_labelling_results_gpt-4o_20250802_103123.csv
experiments/highwayenv_scenarios/: robustness_plot.py
sandra/: actions.py  config.py  decider.py  describer.py  labeler.py  lanelet_network.py  llm.py  rules.py  utils.py  verifier.py  verifier_old.py
sandra/common/: config.py  interface.py  road_network.py
sandra/commonroad/: describer.py  describer_old.py  lanelet_network.py  plan.py  reach.py
sandra/finetuning/: Llama3_(8B)_Ollama.ipynb  Qwen3_(14B)_Reasoning_Conversational.ipynb  (+7 more)
scenarios/: ZAM_Sandra-4213.xml
src/: actions.py  config.py  decider.py  describer.py  describer_old.py  lanelet_network.py  llm.py  utils.py  verifier.py  verifier_old.py
test/: test_continuous_control.py  test_highenv_decider.py  test_labeler.py  test_prompting.py  test_road_network.py  test_verifier.py
(+19 files in other folders)
